# ecoflow-ocean-ha

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/workflows/: validate.yml
automations/: examples.yaml
custom_components/ecoflow_ocean/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  ev_charger_sensor.py  manifest.json  panel_sensor.py  sensor.py  strings.json
custom_components/ecoflow_ocean/pyecoflowocean/: __init__.py  _poweroceanplus_snip.proto  auth.py  (+15 more)
dashboards/: ecoflow-ocean.yaml
docs/: api-notes.md  capture-traffic.md  inverter-field-mapping.md
pyecoflowocean/: __init__.py  auth.py  client.py  const.py  parser.py
scripts/: analyze_har.py  discover_devices.py  env_loader.py  fetch_panel2_proto.py  find_string5.py  ha_probe.py  inverter_field_correlate.py  inverter_frame_dump.py  inverter_full_dump.py  inverter_mqtt_capture.py  inverter_raw_capture.py  modbus_probe.py  mppt_probe.py  mqtt_probe.py  ocean_api_scan.py  panel_label_capture.py  panel_proto_probe.py  power_flow.py  proto_field_dump.py  set_github_topics.ps1  setup_env.py  test_login.py
tests/fixtures/: ocean_pro_detail.json  powerocean_detail.json
web/: .env.example  Containerfile  Dockerfile  README.md  compose.yml  deploy-infra3.sh  ecoflow-ocean-web.container  requirements.txt
web/backend/: __init__.py  config.py  history.py  hub.py  main.py  mqtt_multi.py
web/frontend/: app.js  flow-core.js  flow.css  flow.html  flow.js  house.css  house.html  house.js  index.html  styles.css
(+21 files in other folders)
