[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyecoflowocean"
version = "0.1.0"
description = "Unofficial Python client for EcoFlow Power Ocean (US app API)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "andre" }]
dependencies = [
    "aiohttp>=3.9",
    "paho-mqtt>=2.0",
    "protobuf>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["custom_components/ecoflow_ocean"]
include = ["pyecoflowocean*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
